--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
     "next": "16.1.6",
+    "next-auth": "^5.0.0-beta.30",
     "pg": "^8.17.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
